--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ python_version = "3.8"
 ignore_missing_imports = true
 
 files = "vllm"
-# TODO(woosuk): Include the code from Megatron and HuggingFace.
+# TODO(): Include the code from Megatron and HuggingFace.
 exclude = "vllm/model_executor/parallel_utils/|vllm/model_executor/models/"
 
 
